@@ -178,6 +178,7 @@ because of Phabricator reports.
 * Skin::makeUrl() has been deprecated. Title methods should be used instead.
 * Skin::privacyLink(), Skin::disclaimerLink() and Skin::aboutLink() have been
   deprecated. Please use Skin::footerLink() instead.
+* Skin::getLogo() has been deprecated. Use ResourceLoaderSkinModule instead.
 * …
 
 === Other changes in 1.36 ===
